--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@angular/platform-browser": "~8.0.0-rc.2",
     "@angular/platform-browser-dynamic": "~8.0.0-rc.2",
     "@angular/router": "~8.0.0-rc.2",
+    "ng2-pdfjs-viewer": "^3.2.5",
     "normalize": "^0.3.1",
-    "pdfjs": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.0"
@@ -30,9 +30,9 @@
     "@angular/cli": "~8.0.0-rc.2",
     "@angular/compiler-cli": "~8.0.0-rc.2",
     "@angular/language-service": "~8.0.0-rc.2",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
