--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.0.0-rc.2",
     "@angular/platform-browser-dynamic": "~8.0.0-rc.2",
     "@angular/router": "~8.0.0-rc.2",
+    "angular-resizable-element": "^3.2.4",
     "ng2-pdfjs-viewer": "^3.2.5",
     "normalize": "^0.3.1",
     "rxjs": "~6.4.0",
