refactor: Fix clash with pdfjs and base href

--- a/angular.json
+++ b/angular.json
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "windows:build"
+            "browserTarget": "angularxwindow:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "windows:build:production"
+              "browserTarget": "angularxwindow:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "windows:build"
+            "browserTarget": "angularxwindow:build"
           }
         },
         "test": {
@@ -114,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "windows:serve"
+            "devServerTarget": "angularxwindow:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "windows:serve:production"
+              "devServerTarget": "angularxwindow:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "windows"
+  "defaultProject": "angularxwindow"
 }
