--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser": "~8.0.0-rc.2",
     "@angular/platform-browser-dynamic": "~8.0.0-rc.2",
     "@angular/router": "~8.0.0-rc.2",
+    "@ckeditor/ckeditor5-angular": "^1.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^12.2.0",
+    "@ng-stack/contenteditable": "^1.0.1",
     "angular-resizable-element": "^3.2.4",
     "ng2-pdfjs-viewer": "^3.2.5",
     "normalize": "^0.3.1",
     "rxjs": "~6.4.0",
+    "summernote": "^0.8.12",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.0"
   },
